Enabled ip6tables NAT support

--- a/arch/arm64/configs/custom_tissot-perf_defconfig
+++ b/arch/arm64/configs/custom_tissot-perf_defconfig
@@ -852,7 +852,7 @@ CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_NF_CONNTRACK_IPV6=y
 CONFIG_NF_REJECT_IPV6=y
 CONFIG_NF_LOG_IPV6=y
-# CONFIG_NF_NAT_IPV6 is not set
+CONFIG_NF_NAT_IPV6=y
 CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_AH is not set
 # CONFIG_IP6_NF_MATCH_EUI64 is not set
@@ -869,8 +869,8 @@ CONFIG_IP6_NF_TARGET_REJECT=y
 # CONFIG_IP6_NF_TARGET_SYNPROXY is not set
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
-# CONFIG_IP6_NF_SECURITY is not set
-# CONFIG_IP6_NF_NAT is not set
+CONFIG_IP6_NF_SECURITY=y
+CONFIG_IP6_NF_NAT=y
 CONFIG_BRIDGE_NF_EBTABLES=y
 CONFIG_BRIDGE_EBT_BROUTE=y
 # CONFIG_BRIDGE_EBT_T_FILTER is not set
