--- a/arch/arm64/configs/custom_tissot-perf_defconfig
+++ b/arch/arm64/configs/custom_tissot-perf_defconfig
@@ -811,69 +811,43 @@ CONFIG_NETFILTER_XT_MATCH_U32=y
 #
 # IP: Netfilter Configuration
 #
-CONFIG_NF_DEFRAG_IPV4=y
 CONFIG_NF_CONNTRACK_IPV4=y
-# CONFIG_NF_CONNTRACK_PROC_COMPAT is not set
-# CONFIG_NF_LOG_ARP is not set
-CONFIG_NF_LOG_IPV4=y
-CONFIG_NF_TABLES_IPV4=y
-# CONFIG_NFT_CHAIN_ROUTE_IPV4 is not set
-CONFIG_NF_REJECT_IPV4=y
-CONFIG_NFT_REJECT_IPV4=y
-# CONFIG_NF_TABLES_ARP is not set
-CONFIG_NF_NAT_IPV4=y
-# CONFIG_NFT_CHAIN_NAT_IPV4 is not set
-CONFIG_NF_NAT_MASQUERADE_IPV4=y
-CONFIG_NFT_MASQ_IPV4=y
-# NF_NAT_SNMP_BASIC is not set
-CONFIG_NF_NAT_PROTO_GRE=y
-CONFIG_NF_NAT_PPTP=y
-CONFIG_NF_NAT_H323=y
 CONFIG_IP_NF_IPTABLES=y
-# CONFIG_IP_NF_MATCH_AH is not set
-# CONFIG_IP_NF_MATCH_ECN is not set
-# CONFIG_IP_NF_MATCH_RPFILTER is not set
-# CONFIG_IP_NF_MATCH_TTL is not set
+CONFIG_IP_NF_MATCH_AH=y
+CONFIG_IP_NF_MATCH_ECN=y
+CONFIG_IP_NF_MATCH_RPFILTER=y
+CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
 # CONFIG_IP_NF_TARGET_SYNPROXY is not set
 CONFIG_IP_NF_NAT=y
 CONFIG_IP_NF_TARGET_MASQUERADE=y
+CONFIG_IP_NF_TARGET_NATTYPE_MODULE=y
 CONFIG_IP_NF_TARGET_NETMAP=y
-# CONFIG_IP_NF_TARGET_REDIRECT is not set
+CONFIG_IP_NF_TARGET_REDIRECT=y
 CONFIG_IP_NF_MANGLE=y
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
 # CONFIG_IP_NF_TARGET_ECN is not set
 CONFIG_IP_NF_TARGET_TTL=y
 CONFIG_IP_NF_RAW=y
-# CONFIG_IP_NF_SECURITY is not set
-# CONFIG_IP_NF_ARPTABLES is not set
-# CONFIG_IP_NF_ARPFILTER is not set
-# CONFIG_IP_NF_ARP_MANGLE is not set
+CONFIG_IP_NF_SECURITY=y
+CONFIG_IP_NF_ARPTABLES=y
+CONFIG_IP_NF_ARPFILTER=y
+CONFIG_IP_NF_ARP_MANGLE=y
 
 #
 # IPv6: Netfilter Configuration
 #
-CONFIG_NF_DEFRAG_IPV6=y
 CONFIG_NF_CONNTRACK_IPV6=y
-CONFIG_NF_TABLES_IPV6=y
-# CONFIG_NFT_CHAIN_ROUTE_IPV6 is not set
-CONFIG_NF_REJECT_IPV6=y
-CONFIG_NFT_REJECT_IPV6=y
-CONFIG_NF_LOG_IPV6=y
-CONFIG_NF_NAT_IPV6=y
-# CONFIG_NFT_CHAIN_NAT_IPV6 is not set
-CONFIG_NF_NAT_MASQUERADE_IPV6=y
-CONFIG_NFT_MASQ_IPV6=y
 CONFIG_IP6_NF_IPTABLES=y
-# CONFIG_IP6_NF_MATCH_AH is not set
+CONFIG_IP6_NF_MATCH_AH=y
 # CONFIG_IP6_NF_MATCH_EUI64 is not set
 # CONFIG_IP6_NF_MATCH_FRAG is not set
 # CONFIG_IP6_NF_MATCH_OPTS is not set
 # CONFIG_IP6_NF_MATCH_HL is not set
 # CONFIG_IP6_NF_MATCH_IPV6HEADER is not set
 # CONFIG_IP6_NF_MATCH_MH is not set
-# CONFIG_IP6_NF_MATCH_RPFILTER is not set
+CONFIG_IP6_NF_MATCH_RPFILTER=y
 # CONFIG_IP6_NF_MATCH_RT is not set
 # CONFIG_IP6_NF_TARGET_HL is not set
 CONFIG_IP6_NF_FILTER=y
@@ -881,7 +855,7 @@ CONFIG_IP6_NF_TARGET_REJECT=y
 # CONFIG_IP6_NF_TARGET_SYNPROXY is not set
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
-# CONFIG_IP6_NF_SECURITY is not set
+CONFIG_IP6_NF_SECURITY=y
 CONFIG_IP6_NF_NAT=y
 CONFIG_IP6_NF_TARGET_MASQUERADE=y
 # CONFIG_IP6_NF_TARGET_NPT is not set
