--- a/template/ramdisk/overlay/init.spectrum.rc
+++ b/template/ramdisk/overlay/init.spectrum.rc
@@ -28,8 +28,8 @@ on property:persist.spectrum.profile=0
    write /sys/devices/platform/kcal_ctrl.0/kcal_min 35
 
  #Hotplug
-   write /sys/module/autosmp/parameters/enabled N
-   write /sys/kernel/autosmp/conf/delay 100
+   write /sys/module/autosmp/parameters/enabled Y
+   write /sys/kernel/autosmp/conf/delay 200
    write /sys/kernel/autosmp/conf/max_cpus 8
    write /sys/kernel/autosmp/conf/min_cpus 1
    write /sys/kernel/autosmp/conf/cycle_down 2
@@ -37,6 +37,7 @@ on property:persist.spectrum.profile=0
    write /sys/kernel/autosmp/conf/cpufreq_down 40
    write /sys/kernel/autosmp/conf/cpufreq_up 60
  #GPU
+   write /sys/class/kgsl/kgsl-3d0/devfreq/governor simple_ondemand
    write /sys/module/adreno_idler/parameters/adreno_idler_active 1
    write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 133330000
    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 650000000
@@ -70,6 +71,7 @@ on property:persist.spectrum.profile=1
    write /sys/kernel/autosmp/conf/cpufreq_down 40
    write /sys/kernel/autosmp/conf/cpufreq_up 60
  #GPU
+   write /sys/class/kgsl/kgsl-3d0/devfreq/governor simple_ondemand
    write /sys/module/adreno_idler/parameters/adreno_idler_active 0
    write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 133330000
    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 700000000
@@ -83,11 +85,11 @@ on property:persist.spectrum.profile=2
 
  #Hotplug
    write /sys/module/autosmp/parameters/enabled Y
-   write /sys/kernel/autosmp/conf/delay 500
-   write /sys/kernel/autosmp/conf/max_cpus 8
+   write /sys/kernel/autosmp/conf/delay 400
+   write /sys/kernel/autosmp/conf/max_cpus 4
    write /sys/kernel/autosmp/conf/min_cpus 1
    write /sys/kernel/autosmp/conf/cycle_down 0
-   write /sys/kernel/autosmp/conf/cycle_up 4
+   write /sys/kernel/autosmp/conf/cycle_up 3
    write /sys/kernel/autosmp/conf/cpufreq_down 50
    write /sys/kernel/autosmp/conf/cpufreq_up 40
    
@@ -102,6 +104,7 @@ on property:persist.spectrum.profile=2
    write /sys/devices/platform/kcal_ctrl.0/kcal_min 35
 
  #GPU
+   write /sys/class/kgsl/kgsl-3d0/devfreq/governor simple_ondemand
    write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 133330000
    write /sys/class/kgsl/kgsl-3d0/max_gpuclk  650000000
    write /sys/module/adreno_idler/parameters/adreno_idler_active 1
@@ -133,6 +136,7 @@ on property:persist.spectrum.profile=3
    write /sys/devices/platform/kcal_ctrl.0/kcal_hue 0
    write /sys/devices/platform/kcal_ctrl.0/kcal_min 35
  #GPU
+   write /sys/class/kgsl/kgsl-3d0/devfreq/governor simple_ondemand
    write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 700000000
    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 700000000
    write /sys/module/adreno_idler/parameters/adreno_idler_active 0
