--- a/template/ramdisk/overlay/init.spectrum.rc
+++ b/template/ramdisk/overlay/init.spectrum.rc
@@ -11,14 +11,7 @@ on property:sys.boot_completed=1
    # Add kernel name
    setprop persist.spectrum.kernel Moun Kernel
 
-# Balance (default profile)
-on property:persist.spectrum.profile=0
- #CPU
-   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
-   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 652800
-   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2016000
-
-
+ #Kcal
    write /sys/devices/platform/kcal_ctrl.0/kcal 256 256 256
    write /sys/devices/platform/kcal_ctrl.0/kcal_enable 1
    write /sys/devices/platform/kcal_ctrl.0/kcal_sat 262
@@ -27,6 +20,12 @@ on property:persist.spectrum.profile=0
    write /sys/devices/platform/kcal_ctrl.0/kcal_hue 0
    write /sys/devices/platform/kcal_ctrl.0/kcal_min 35
 
+# Balance (default profile)
+on property:persist.spectrum.profile=0
+ #CPU
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 652800
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2016000
  #Hotplug
    write /sys/module/autosmp/parameters/enabled Y
    write /sys/kernel/autosmp/conf/delay 200
@@ -39,11 +38,9 @@ on property:persist.spectrum.profile=0
  #GPU
    write /sys/class/kgsl/kgsl-3d0/devfreq/governor simple_ondemand
    write /sys/module/adreno_idler/parameters/adreno_idler_active 1
+   write /sys/module/adreno_idler/parameters/adreno_idler_idlewait 30
    write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 133330000
    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 650000000
-   
-
-
 
 # Performance 
 on property:persist.spectrum.profile=1
@@ -51,15 +48,6 @@ on property:persist.spectrum.profile=1
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 652800
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2208000
-
- #KCAL
-   write /sys/devices/platform/kcal_ctrl.0/kcal 256 256 256
-   write /sys/devices/platform/kcal_ctrl.0/kcal_enable 1
-   write /sys/devices/platform/kcal_ctrl.0/kcal_sat 262
-   write /sys/devices/platform/kcal_ctrl.0/kcal_val 253
-   write /sys/devices/platform/kcal_ctrl.0/kcal_cont 248
-   write /sys/devices/platform/kcal_ctrl.0/kcal_hue 0
-   write /sys/devices/platform/kcal_ctrl.0/kcal_min 35
 
  #Hotplug
    write /sys/module/autosmp/parameters/enabled N
@@ -71,8 +59,9 @@ on property:persist.spectrum.profile=1
    write /sys/kernel/autosmp/conf/cpufreq_down 40
    write /sys/kernel/autosmp/conf/cpufreq_up 60
  #GPU
-   write /sys/class/kgsl/kgsl-3d0/devfreq/governor simple_ondemand
+   write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
    write /sys/module/adreno_idler/parameters/adreno_idler_active 0
+   write /sys/module/adreno_idler/parameters/adreno_idler_idlewait 15
    write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 133330000
    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 700000000
 
@@ -86,28 +75,18 @@ on property:persist.spectrum.profile=2
  #Hotplug
    write /sys/module/autosmp/parameters/enabled Y
    write /sys/kernel/autosmp/conf/delay 400
-   write /sys/kernel/autosmp/conf/max_cpus 4
+   write /sys/kernel/autosmp/conf/max_cpus 8
    write /sys/kernel/autosmp/conf/min_cpus 1
    write /sys/kernel/autosmp/conf/cycle_down 0
    write /sys/kernel/autosmp/conf/cycle_up 3
    write /sys/kernel/autosmp/conf/cpufreq_down 50
    write /sys/kernel/autosmp/conf/cpufreq_up 40
-   
-
- #KCAL
-   write /sys/devices/platform/kcal_ctrl.0/kcal 256 256 256
-   write /sys/devices/platform/kcal_ctrl.0/kcal_enable 1
-   write /sys/devices/platform/kcal_ctrl.0/kcal_sat 262
-   write /sys/devices/platform/kcal_ctrl.0/kcal_val 253
-   write /sys/devices/platform/kcal_ctrl.0/kcal_cont 248
-   write /sys/devices/platform/kcal_ctrl.0/kcal_hue 0
-   write /sys/devices/platform/kcal_ctrl.0/kcal_min 35
-
  #GPU
    write /sys/class/kgsl/kgsl-3d0/devfreq/governor simple_ondemand
    write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 133330000
    write /sys/class/kgsl/kgsl-3d0/max_gpuclk  650000000
    write /sys/module/adreno_idler/parameters/adreno_idler_active 1
+   write /sys/module/adreno_idler/parameters/adreno_idler_idlewait 20
 
 # Gaming
 on property:persist.spectrum.profile=3
@@ -115,8 +94,6 @@ on property:persist.spectrum.profile=3
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 2200000
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2200000
-
-   
  #Hotplug
    write /sys/module/autosmp/parameters/enabled N
    write /sys/kernel/autosmp/conf/delay 100
@@ -126,17 +103,9 @@ on property:persist.spectrum.profile=3
    write /sys/kernel/autosmp/conf/cycle_up 2
    write /sys/kernel/autosmp/conf/cpufreq_down 40
    write /sys/kernel/autosmp/conf/cpufreq_up 60
-
- #KCAL
-   write /sys/devices/platform/kcal_ctrl.0/kcal 256 256 256
-   write /sys/devices/platform/kcal_ctrl.0/kcal_enable 1
-   write /sys/devices/platform/kcal_ctrl.0/kcal_sat 262
-   write /sys/devices/platform/kcal_ctrl.0/kcal_val 253
-   write /sys/devices/platform/kcal_ctrl.0/kcal_cont 248
-   write /sys/devices/platform/kcal_ctrl.0/kcal_hue 0
-   write /sys/devices/platform/kcal_ctrl.0/kcal_min 35
  #GPU
-   write /sys/class/kgsl/kgsl-3d0/devfreq/governor simple_ondemand
+   write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
    write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 700000000
    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 700000000
    write /sys/module/adreno_idler/parameters/adreno_idler_active 0
+   write /sys/module/adreno_idler/parameters/adreno_idler_idlewait 15
