--- a/template/ramdisk/overlay/init.spectrum.rc
+++ b/template/ramdisk/overlay/init.spectrum.rc
@@ -9,7 +9,7 @@ on property:sys.boot_completed=1
    # Enable Spectrum support
    setprop spectrum.support 1
    # Add kernel name
-   setprop persist.spectrum.kernel Moun Kernel
+   setprop persist.spectrum.kernel Moun 
 
  #Kcal
    write /sys/devices/platform/kcal_ctrl.0/kcal 256 256 256
@@ -26,6 +26,17 @@ on property:persist.spectrum.profile=0
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 652800
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2016000
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor interactive
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 652800
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 2016000
+   write /sys/devices/system/cpu/cpu0/online 1
+   write /sys/devices/system/cpu/cpu1/online 1
+   write /sys/devices/system/cpu/cpu2/online 1
+   write /sys/devices/system/cpu/cpu3/online 1
+   write /sys/devices/system/cpu/cpu4/online 1
+   write /sys/devices/system/cpu/cpu5/online 1
+   write /sys/devices/system/cpu/cpu6/online 1
+   write /sys/devices/system/cpu/cpu7/online 1
  #Hotplug
    write /sys/module/autosmp/parameters/enabled Y
    write /sys/kernel/autosmp/conf/delay 200
@@ -39,6 +50,7 @@ on property:persist.spectrum.profile=0
    write /sys/class/kgsl/kgsl-3d0/devfreq/governor simple_ondemand
    write /sys/module/adreno_idler/parameters/adreno_idler_active 1
    write /sys/module/adreno_idler/parameters/adreno_idler_idlewait 30
+   write /sys/module/adreno_idler/parameters/adreno_idler_idleworkload 4000
    write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 133330000
    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 650000000
 
@@ -48,6 +60,17 @@ on property:persist.spectrum.profile=1
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 652800
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2208000
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor interactive
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 652800
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 2208000
+   write /sys/devices/system/cpu/cpu0/online 1
+   write /sys/devices/system/cpu/cpu1/online 1
+   write /sys/devices/system/cpu/cpu2/online 1
+   write /sys/devices/system/cpu/cpu3/online 1
+   write /sys/devices/system/cpu/cpu4/online 1
+   write /sys/devices/system/cpu/cpu5/online 1
+   write /sys/devices/system/cpu/cpu6/online 1
+   write /sys/devices/system/cpu/cpu7/online 1
 
  #Hotplug
    write /sys/module/autosmp/parameters/enabled N
@@ -62,6 +85,7 @@ on property:persist.spectrum.profile=1
    write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
    write /sys/module/adreno_idler/parameters/adreno_idler_active 0
    write /sys/module/adreno_idler/parameters/adreno_idler_idlewait 15
+   write /sys/module/adreno_idler/parameters/adreno_idler_idleworkload 7000
    write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 133330000
    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 700000000
 
@@ -70,7 +94,18 @@ on property:persist.spectrum.profile=2
  #CPU
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 652800
-   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1689000
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1804000
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor interactive
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 652800
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1804000
+   write /sys/devices/system/cpu/cpu0/online 1
+   write /sys/devices/system/cpu/cpu1/online 1
+   write /sys/devices/system/cpu/cpu2/online 1
+   write /sys/devices/system/cpu/cpu3/online 1
+   write /sys/devices/system/cpu/cpu4/online 1
+   write /sys/devices/system/cpu/cpu5/online 1
+   write /sys/devices/system/cpu/cpu6/online 1
+   write /sys/devices/system/cpu/cpu7/online 1
 
  #Hotplug
    write /sys/module/autosmp/parameters/enabled Y
@@ -87,6 +122,7 @@ on property:persist.spectrum.profile=2
    write /sys/class/kgsl/kgsl-3d0/max_gpuclk  650000000
    write /sys/module/adreno_idler/parameters/adreno_idler_active 1
    write /sys/module/adreno_idler/parameters/adreno_idler_idlewait 20
+   write /sys/module/adreno_idler/parameters/adreno_idler_idleworkload 4000
 
 # Gaming
 on property:persist.spectrum.profile=3
@@ -94,13 +130,23 @@ on property:persist.spectrum.profile=3
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 2200000
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2200000
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 2200000
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 2200000
+   write /sys/devices/system/cpu/cpu0/online 1
+   write /sys/devices/system/cpu/cpu1/online 1
+   write /sys/devices/system/cpu/cpu2/online 1
+   write /sys/devices/system/cpu/cpu3/online 1
+   write /sys/devices/system/cpu/cpu4/online 1
+   write /sys/devices/system/cpu/cpu5/online 1
+   write /sys/devices/system/cpu/cpu6/online 1
+   write /sys/devices/system/cpu/cpu7/online 1
  #Hotplug
-   write /sys/module/autosmp/parameters/enabled N
-   write /sys/kernel/autosmp/conf/delay 100
+   write /sys/module/autosmp/parameters/enabled y
+   write /sys/kernel/autosmp/conf/delay 0
    write /sys/kernel/autosmp/conf/max_cpus 8
-   write /sys/kernel/autosmp/conf/min_cpus 1
-   write /sys/kernel/autosmp/conf/cycle_down 2
-   write /sys/kernel/autosmp/conf/cycle_up 2
+   write /sys/kernel/autosmp/conf/min_cpus 8
+   write /sys/kernel/autosmp/conf/cycle_down 8
+   write /sys/kernel/autosmp/conf/cycle_up 0
    write /sys/kernel/autosmp/conf/cpufreq_down 40
    write /sys/kernel/autosmp/conf/cpufreq_up 60
  #GPU
@@ -109,3 +155,4 @@ on property:persist.spectrum.profile=3
    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 700000000
    write /sys/module/adreno_idler/parameters/adreno_idler_active 0
    write /sys/module/adreno_idler/parameters/adreno_idler_idlewait 15
+   write /sys/module/adreno_idler/parameters/adreno_idler_idleworkload 7000
