--- a/template/ramdisk/overlay/init.spectrum.rc
+++ b/template/ramdisk/overlay/init.spectrum.rc
@@ -47,7 +47,7 @@ on property:persist.spectrum.profile=0
    write /sys/kernel/autosmp/conf/cpufreq_down 40
    write /sys/kernel/autosmp/conf/cpufreq_up 60
  #GPU
-   write /sys/class/kgsl/kgsl-3d0/devfreq/governor simple_ondemand
+   write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
    write /sys/module/adreno_idler/parameters/adreno_idler_active 1
    write /sys/module/adreno_idler/parameters/adreno_idler_idlewait 30
    write /sys/module/adreno_idler/parameters/adreno_idler_idleworkload 4000
@@ -128,10 +128,10 @@ on property:persist.spectrum.profile=2
 on property:persist.spectrum.profile=3
  #CPU
    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor interactive
-   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 2200000
-   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2200000
-   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 2200000
-   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 2200000
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 2016000
+   write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 2208000
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 2016000
+   write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 2208000
    write /sys/devices/system/cpu/cpu0/online 1
    write /sys/devices/system/cpu/cpu1/online 1
    write /sys/devices/system/cpu/cpu2/online 1
@@ -151,7 +151,7 @@ on property:persist.spectrum.profile=3
    write /sys/kernel/autosmp/conf/cpufreq_up 60
  #GPU
    write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
-   write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 700000000
+   write /sys/class/kgsl/kgsl-3d0/devfreq/min_freq 650000000
    write /sys/class/kgsl/kgsl-3d0/max_gpuclk 700000000
    write /sys/module/adreno_idler/parameters/adreno_idler_active 0
    write /sys/module/adreno_idler/parameters/adreno_idler_idlewait 15
