Defconfig: Added Boeffla Wakelock Blocker

--- a/arch/arm64/configs/custom_tissot-perf_defconfig
+++ b/arch/arm64/configs/custom_tissot-perf_defconfig
@@ -4599,3 +4599,4 @@ CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_POWERSUSPEND=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_STATE_NOTIFIER=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
